syntax = "proto3";

package spectral;

option go_package = "./api/service/";

service EnergyService {
  rpc GetUsages(GetUsageRequest) returns (GetUsageResponse) {}
}

message GetUsageRequest {
  string startTime = 1;
  string endTime = 2;
}

message GetUsageResponse {
  UsageData data = 1;
}

message UsageData {
  double total = 1;
  repeated Usage usages = 2;
}

message Usage {
  int32 id = 1;
  string time = 2;
  float usage = 3;
}
